Changelog
=========

1.0a5 - Unreleased
------------------

- Move search results to the left for RTL scripts.
  Fixes http://dev.plone.org/plone/ticket/10015.
  [emanlove]

- Port changes to author.pt from 
  http://dev.plone.org/plone/changeset/32858
  [esteele]
  
- Limit the caption width to 200px.
  Fixes http://dev.plone.org/plone/ticket/9992.
  [dukebody]

- Avoid leading spaces in the class attribute of the body element.
  Fixes http://dev.plone.org/plone/ticket/9489.
  [dukebody]

- Removed underline from "Manage portlets" fallback link
  [spliter]

- Adjust login overlay position and width. Refs 
  http://dev.plone.org/plone/ticket/9869
  [dukebody]

- Underline links in warning and error info messages. This closes
  http://dev.plone.org/plone/ticket/9801
  [dukebody]

- Add some spacing between siteaction links. This closes
  http://dev.plone.org/plone/ticket/9830
  [dukebody]

- Style display view menu for items selected as main view for a
  folder. This closes http://dev.plone.org/plone/ticket/9894
  [dukebody, thanks cewing]

1.0a4 - 2009-12-21
------------------

- made descriptions for items in livesearch wrap normally
  [spliter]

- fixed positioning of livesearch to not overflow the screen on the
  right and have horizontal scrollbar.
  [spliter]

- Enabled thumbnails view in Sunburst. Fixes #9870.
  [spliter]

- Do not display the author contact form when the author has no email
  (for example for openid users).  Refs #8707.
  [maurits]

- On author.cpt, only display the "log in to add comments" button if mailhost
  is defined. Only show the mailhost warning if user is authenticated.
  [esteele]

1.0a3 - 2009-12-02
------------------

- Add selectors for openid login form section to login styles.
  [smcmahon]

- Sunburst has it's own table-less prefs_main_template.pt to 
  keep validation of control panels for both sunburst and 
  plonetheme.classic
  [spliter]

- removed negative margin from #contentActionMenus - it broke 