@@ -4,6 +4,12 @@ Changelog
 1.0a5 - Unreleased
 ------------------
 
+- Don't limit the styling of portal messages etc. to the 
+  #region-content, portal messages might also appear out side
+  that area in an overlay, portlet etc.
+  Fixes https://dev.plone.org/plone/ticket/10069
+  [pelle]  
+
 - Move search results to the left for RTL scripts.
   Fixes http://dev.plone.org/plone/ticket/10015.
   [emanlove]
